--- a/index.html
+++ b/index.html
@@ -49,20 +49,22 @@
         </div>
       </div>
 
-      <table id="t">
-        <thead>
-          <tr>
-            <th data-key="character">Character <span class="hint">click to sort</span></th>
-            <th data-key="actor">Actor <span class="hint">click to sort</span></th>
-            <th data-key="first" class="mono">First</th>
-            <th data-key="last" class="mono">Last</th>
-            <th data-key="end">Fate / Final position</th>
-          </tr>
-        </thead>
-        <tbody id="tbody">
-          <tr><td colspan="5">Loading…</td></tr>
-        </tbody>
-      </table>
+      <div class="table-scroll">
+        <table id="t">
+          <thead>
+            <tr>
+              <th data-key="character">Character <span class="hint">click to sort</span></th>
+              <th data-key="actor">Actor <span class="hint">click to sort</span></th>
+              <th data-key="first" class="mono">First</th>
+              <th data-key="last" class="mono">Last</th>
+              <th data-key="end">Fate / Final position</th>
+            </tr>
+          </thead>
+          <tbody id="tbody">
+            <tr><td colspan="5">Loading…</td></tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <footer>
