--- a/index.html
+++ b/index.html
@@ -1,10 +1,95 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YJCYWQFHGB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YJCYWQFHGB');
+  </script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Game of Thrones — Main Cast (All Seasons)</title>
   <link rel="stylesheet" href="style.css">
+  <meta property="og:title" content="Game of Thrones — Main Cast (All Seasons)" />
+  <meta property="og:description" content="A searchable, sortable index of every actor credited in the main titles across all eight seasons of Game of Thrones." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://davorg.dev/got/" />
+  <meta property="og:site_name" content="davorg.dev" />
+
+  <meta property="og:image" content="https://davorg.dev/got/got.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Collage of main Game of Thrones characters from all eight seasons" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Game of Thrones — Main Cast (All Seasons)" />
+  <meta name="twitter:description" content="Every actor credited in the main titles across eight seasons — searchable and sortable." />
+  <meta name="twitter:image" content="https://davorg.dev/got/got.png" />
+
+  <meta name="description" content="Complete index of actors credited in the main titles of Game of Thrones (Seasons 1–8), including first and last appearances and character outcomes." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "WebSite",
+        "@id": "https://davorg.dev/#website",
+        "name": "davorg.dev",
+        "url": "https://davorg.dev/"
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://davorg.dev/got/#webpage",
+        "url": "https://davorg.dev/got/",
+        "name": "Game of Thrones — Main Cast (All Seasons)",
+        "isPartOf": { "@id": "https://davorg.dev/#website" },
+        "about": [
+          { "@type": "TVSeries", "name": "Game of Thrones" }
+        ],
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://davorg.dev/got/got.png"
+        },
+        "description": "A searchable, sortable index of every actor credited in the main titles across all eight seasons of Game of Thrones."
+      },
+      {
+        "@type": "Dataset",
+        "@id": "https://davorg.dev/got/got_main_cast.json#dataset",
+        "name": "Game of Thrones main cast (main titles) — seasons 1–8",
+        "description": "Structured data for actors credited in the main titles of Game of Thrones, with character names, first/last episode IDs, and fate/final status.",
+        "url": "https://davorg.dev/got/",
+        "distribution": [
+          {
+            "@type": "DataDownload",
+            "encodingFormat": "application/json",
+            "contentUrl": "https://davorg.dev/got/got_main_cast.json"
+          }
+        ],
+        "keywords": [
+          "Game of Thrones",
+          "cast",
+          "main titles",
+          "HBO",
+          "TV series",
+          "actors"
+        ],
+        "creator": {
+          "@type": "Person",
+          "name": "Dave Cross",
+          "url": "https://davorg.dev/"
+        },
+        "license": "https://creativecommons.org/licenses/by/4.0/"
+      }
+    ]
+  }
+  </script>
+
 </head>
 <body>
   <div class="page">
