Add link to data

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <footer>
       <div>
-        Data file: <span class="mono">got_main_cast.json</span> (must be in the same folder as this page).
+        Data file: <span class="mono"><a href="got_main_cast.json">got_main_cast.json</a></span>.
       </div>
     </footer>
   </div>
